# YetAnotherDataScraper

./: .gitignore  README.md  setup.cfg  setup.py  yads_config.toml
src/: cli.py  config.py  config.toml  manage.py
src/scrapers/: u15dvdinfo.py
test/: TestCli.py  TestManage.py  config.toml
