[metadata]
name = yads
version = 0.0.0
description = Yet another data scraper
keywords = scraper, adult
license = 'GPLv3'
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    src
    src.scrapers
install_requires =
    toml
    click
    requests
    beautifulsoup4


[options.entry_points]
console_scripts =
    yads-cli = src.cli:cli

#[options.packages.find]
#where = src
#include = yads*