[metadata]
name = yads
version = 0.0.0
description = Yet another data scraper
keywords = scraper, adult
license = 'GPLv3'
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages =
    src
    src.scrapers
include_package_data = True
install_requires =
    toml
    requests
    beautifulsoup4
    pillow


[options.entry_points]
console_scripts =
    yads-cli = src.cli:main
